--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,21 +1,65 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title><%= title %></title>
-  <%- include('./meta.ejs') %>
-  <%- include('./link.ejs') %>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>One</title>
+<link href="/stylesheets/bootstrap.min.css" rel="stylesheet" />
+<link href="/stylesheets/flexslider.css" rel="stylesheet" />
+<link href="/stylesheets/style1.css" rel="stylesheet" />
+<link rel="stylesheet" href="/stylesheets/font-awesome.min.css">
+<script src="/javascripts/jquery.min.js"></script>
+<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+<link href='http://fonts.useso.com/css?family=Source+Sans+Pro:200,300,400,600,700,900' rel='stylesheet' type='text/css'>
 </head>
 <body>
+<div class="header">
+  <div class="container"> <a class="navbar-brand" href="index.html"> 博士直通车 </a>
+    <div class="menu"> <a class="toggleMenu" href="#"><img src="images/nav_icon.png" alt="" /> </a>
+      <ul class="nav" id="nav">
+        <li class="current"><a href="index.html">关于我们</a></li>
+        <li><a href="about.html">联系我们</a></li>
+        <li><a href="services.html">登录</a></li>
+        <li><a href="contact.html">注册</a></li>
+        <div class="clear"></div>
+      </ul>
+      <script type="text/javascript" src="js/responsive-nav.js"></script>
+    </div>
+  </div>
+</div>
+<div class="banner text-center">
+  <div class="container">
+    <div class="banner-info">
+      <h1>博士直通车平台</h1>
+      <p>博士直通车是一个基于博士为基础，前任为标杆，院士为旗帜的博士学术上升通道，也是博士价值释放到企业和社会的高速通道，更是跨专业博士交流合作创新平台......</p>
+      <a class="banner_btn" href="about.html">阅读更多</a> </div>
+  </div>
+</div>
+<div class="main">
 
-<%- include('./header.ejs') %>
-
-<div class="main layui-clear">
-  <h1>博士直通车网站首页</h1>
+<div class="about-info">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="block-heading-two">
+          <h2><span>公司简介</span></h2>
+        </div>
+        <p>Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero.</p>
+        <br>
+        <p>Sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+        <a class="banner_btn" href="about.html">阅读更多</a> </div>
+    </div>
+  </div>
 </div>
 
-<%- include('./footer.ejs') %>
-
+<div class="footer">
+  <div class="footer_bottom">
+    <div class="copy">
+      <p>Copyright &copy; 2015 Company Name. More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">博士直通车</a> </p>
+    </div>
+  </div>
+</div>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.flexslider.js"></script>
 </body>
 </html>
